# tgis-deploy-tests

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md
config/: example.yaml
test-gen/: README.md  common.vllm.yaml  common.yaml  generation.proto  pyproject.toml  test_gen.py
tests/product/: flan-t5-xl.yaml  flan-t5-xxl.yaml  flan-ul2.yaml  gpt-neox-20b.yaml  mixtral-8x7b-instruct-v0.1-gptq.yaml  mt0-xxl.yaml  starcoder.yaml
tgis-tester/: Cargo.toml  build.rs
tgis-tester/src/: config.rs  evaluate.rs  lib.rs  main.rs  route.rs  runner.rs  utils.rs  worker.rs
tgis-tester/src/evaluate/: approx_equality.rs  embeddings_similarity.rs  exact_text_match.rs  metrics.rs  multiple.rs  streaming.rs
tgis-tester/src/evaluate/metrics/: cosine_similarity.rs
tgis-tester/src/worker/: remote.rs
