[package]
name = "tgis-tester"
version = "0.4.1"
edition = "2021"
authors = ["Dan Clark"]

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.114"
thiserror = "1.0.58"
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
kube = { version = "0.88.1", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.21.1", features = ["v1_24"] }
schemars = "0.8.16"
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
rand = "0.8.5"
secrecy = "0.8.0"
chrono = "0.4.35"
tabled = { version = "=0.14.0", features = ["color"] } 
approx = "0.5.1"
owo-colors = "4.0.0"
object_store = { version = "0.9.1", features = ["aws"]}
itertools = "0.12.1"
prost = "0.12.3"
tokenizers = { version = "0.15.2", features = ["http"] }
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
hf-hub = "0.3.2"

mio = "^0.8.11" # Override to address CVE-2024-27308

[build-dependencies]
tonic-build = "0.11.0"
